--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(minishell C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(src/main.c includes/minishell.h)
+add_executable(src/main.c includes/minishell.h src/utils.c)
